# tidewave_python

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1_web.yml  2_mcp.yml
.github/workflows/: ci.yaml  release.yaml
examples/: django_app.py  fastapi_app.py  flask_app.py  wsgi_app.py
examples/templates/: base.html  home.html
src/tidewave/: __init__.py  mcp_handler.py  middleware.py
src/tidewave/django/: __init__.py  apps.py  models.py  templates.py
src/tidewave/django/tools/: __init__.py  models.py  sql.py
src/tidewave/fastapi/: __init__.py  middleware.py
src/tidewave/flask/: __init__.py  middleware.py
src/tidewave/jinja2/: __init__.py
src/tidewave/sqlalchemy/: __init__.py  models.py  sql.py
src/tidewave/tools/: __init__.py  base.py  get_logs.py  get_src_location.py  math_tools.py  project_eval.py  source.py
tests/: __init__.py  test_django_execute_sql_query.py  test_django_get_models.py  test_django_middleware.py  test_django_template_debug.py  test_fastapi.py  test_fastapi_integration.py  test_fastapi_middleware.py  test_flask.py  test_flask_middleware.py  test_get_docs.py  test_get_logs.py  test_get_source_location.py  test_jinja_template_debug.py  test_math_tools.py  test_mcp_integration.py  test_middleware.py  test_project_eval.py  test_source.py  test_sqlalchemy_execute_sql_query.py  test_sqlalchemy_get_models.py  test_tools.py
tests/jinja2/: child-includes.html  child.html  grandchild.html  include.html  plain.txt
tests/templates/: base.html  child-includes.html  child.html  dynamic_extend.html  grandchild.html  whitespace.html
tests/templates/non_html/: attrs.txt  test.txt  whitespace.txt  with_angle_bracket.txt
tests/templates/override/: base.html
