[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidewave"
version = "0.1.0"
description = "Python WSGI middleware for Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0.0"]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.12.9",
  "flask>=2.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "django>=4.2.23",
]

[tool.ruff]
target-version = "py39"

# Set what ruff should check for.
# See https://beta.ruff.rs/docs/rules/ for a list of rules.
lint.select = [
  "B",   # bugbear errors
  "C4",  # flake8-comprehensions errors
  "DJ",  # flake8-django errors
  "E",   # pycodestyle errors
  "F",   # pyflakes errors
  "I",   # import sorting
  "Q",   # flake8-quotes errors
  "T20", # flake8-print errors
  "UP",  # py-upgrade
  "W",   # pycodestyle warnings
]
lint.isort.combine-as-imports = true
lint.isort.known-first-party = [ "tidewave" ]
lint.isort.section-order = [ "future", "standard-library", "django", "fastapi", "flask", "third-party", "first-party", "local-folder" ]
lint.isort.sections.django = [ "django" ]
lint.isort.sections.fastapi = [ "fastapi" ]
lint.isort.sections.flask = [ "flask" ]