[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "tidewave"
version = "0.1.0"
description = "Python WSGI middleware for Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [ "pydantic>=2" ]

[project.optional-dependencies]
django = [ "django>=4.2" ]
flask = [ "flask>=2" ]
sqlalchemy = [ "sqlalchemy>=2.0" ]
fastapi = [ "fastapi>=0.100" ]

[dependency-groups]
dev = [
  "django>=4.2",
  "fastapi>=0.100",
  "flask>=2",
  "sqlalchemy>=2.0",

  # Used in example apps
  "flask-sqlalchemy>=3.0",
  "uvicorn>=0.20",

  # Used in dev/tests
  "pytest>=7",
  "ruff>=0.12.9",
]

[tool.ruff]
target-version = "py39"

line-length = 100
# Set what ruff should check for.
# See https://beta.ruff.rs/docs/rules/ for a list of rules.
lint.select = [
  "B",   # bugbear errors
  "C4",  # flake8-comprehensions errors
  "DJ",  # flake8-django errors
  "E",   # pycodestyle errors
  "F",   # pyflakes errors
  "I",   # import sorting
  "Q",   # flake8-quotes errors
  "T20", # flake8-print errors
  "UP",  # py-upgrade
  "W",   # pycodestyle warnings
]
lint.isort.combine-as-imports = true
lint.isort.known-first-party = [ "tidewave" ]
lint.isort.section-order = [
  "future",
  "standard-library",
  "django",
  "fastapi",
  "flask",
  "third-party",
  "first-party",
  "local-folder",
]
lint.isort.sections.django = [ "django" ]
lint.isort.sections.fastapi = [ "fastapi" ]
lint.isort.sections.flask = [ "flask" ]
